feat: Migrate to service discovery and add request limiter